fix bug, list length on mobile

--- a/client/src/styles/leftPane.sass
+++ b/client/src/styles/leftPane.sass
@@ -32,7 +32,7 @@ $left-pane-width: 400px;
   left: 0;
   z-index: 1;
   border-radius: 10px;
-  height: 80vh;
+  height: 70vh;
   width: $left-pane-width;
   margin-top: $menu-height;
   padding: 0 0 0 10px;
